--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^16.11.41",
     "@types/react": "^17.0.47",
     "@types/react-dom": "^17.0.17",
+    "axios": "^0.27.2",
     "babel-jest": "^27.5.1",
     "babel-plugin-named-asset-import": "^0.3.8",
     "babel-preset-react-app": "^10.0.1",
@@ -47,6 +48,7 @@
     "react-dev-utils": "^12.0.1",
     "react-dom": "^17.0.2",
     "react-refresh": "^0.11.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
     "resolve": "^1.22.1",
     "resolve-url-loader": "^4.0.0",
@@ -95,6 +97,7 @@
     "@babel/preset-env": "^7.18.2",
     "@babel/preset-react": "^7.17.12",
     "@babel/preset-typescript": "^7.17.12",
+    "@types/react-router-dom": "^5.3.3",
     "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
     "edit-json-file": "^1.7.0",
